--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=local
 logging.level.com.sds.snow.todo=debug
 
 spring.application.name=todo
-spring.datasource.url=jdbc:h2:~/h2/data
+spring.datasource.url=jdbc:h2:~/h2/data;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.jpa.hibernate.ddl-auto=validate
 
